# django-tag-fields

./: .pre-commit-config.yaml  CHANGELOG.md  CHANGELOG.rst  CONTRIBUTING.rst  README.rst  codecov.yml  pyproject.toml  setup.cfg  tox.ini
.github/workflows/: release.yml  test.yml
docs/: conf.py  custom_tagging.rst  getting_started.rst  index.rst
docs/source/: conf.py  index.rst
requirements/: docs.txt  test.txt
tag_fields/: __init__.py  managers.py  models.py  utils.py
tag_fields/migrations/: 0001_initial.py
tests/: models.py  test_serializers.py  tests.py  ztest_field_manager.py
tests/migrations/: 0001_initial.py
