[build-system]
requires = ["setuptools>=67", "wheel"]
build-backend = "setuptools.build_meta"

[tool.setuptools.packages.find]
namespaces = false
where = ["tag_fields"]

[project]
authors = [{ name = "Alex Gaynor", email = "alex.gaynor@gmail.com" }]
classifiers = [
  "Development Status :: 1 - Planning",
  "Environment :: Web Environment",
  "Framework :: Django",
  "Framework :: Django :: 3.2",
  "Framework :: Django :: 4.0",
  "Framework :: Django :: 4.1",
  "Framework :: Django :: 4.2",
  "Intended Audience :: Developers",
  "License :: OSI Approved :: BSD License",
  "Operating System :: OS Independent",
  "Programming Language :: Python",
  "Programming Language :: Python :: 3.6",
  "Programming Language :: Python :: 3.7",
  "Programming Language :: Python :: 3.8",
  "Programming Language :: Python :: 3.9",
  "Programming Language :: Python :: 3.10",
  "Programming Language :: Python :: 3.11",
]
dependencies = ["Django>=3.2"]
description = "Add field tags to a Django project"
keywords = ["Django", "django", "django tagging"]
license = { file = "LICENSE" }
maintainers = [{ name = "Mark Sevelj", email = "mark.sevelj@dunwright.com.au" }]
name = "django-tag-fields"
readme = "README.rst"
requires-python = ">=3.6"
version = "4.0.0"

[project.urls]
Documentation = "https://django-tag-fields.readthedocs.io"
Repository = "https://github.com/imAsparky/django-tag-fields"
Tracker = "https://github.com/imAsparky/django-tag-fields/issues"


[tool.semantic_release]
branch = "main"
build_command = "pyproject-build"
check_build_status = true
commit_subject = ":memo: build(version): Bump to version - {version}."
major_on_zero = false
remove_dist = false
upload_to_release = false
upload_to_pypi = true
version_variable = "docs/conf.py:__version__,tag_fields/__init__.py:__version__, pyproject.toml:version"


[tool.bandit]
exclude_dirs = ["tests"]
# tests = ["B201", "B301"]
# skips = ["B101", "B601"]

[tool.black]
line-length = 79
target-version = ['py311']
